# sovacount

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  deny.toml  package-lock.json  package.json  playwright.config.ts  pricing.toml
.config/: nextest.toml
.github/workflows/: ci.yml  macos-release.yml  release.yml
LAUNCHER/: README-dual.md  sovacount-dual.sh
LAUNCHER/SovaCount.app/Contents/: Info.plist
LAUNCHER/SovaCount.app/Contents/MacOS/: sovacount-launcher
LAUNCHER/SovaCount.app/Contents/Resources/: icon.icns
benchmark/: README.md  real-test.json  summary.json
crates/governor-cli/: Cargo.toml
crates/governor-cli/src/: main.rs
crates/governor-core/: Cargo.toml
crates/governor-core/src/: cache.rs  classifier.rs  config.rs  cost.rs  error.rs  heuristic.rs  lib.rs  pricing.rs  prompt.rs  types.rs
crates/governor-core/src/prompts/: classifier.md
crates/governor-core/src/providers/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai.rs
crates/governor-core/tests/: integration.rs
crates/governor-http/: Cargo.toml
crates/governor-http/src/: dashboard.html  lib.rs  main.rs
crates/governor-launcher-gui/: Cargo.toml  entitlements.plist
crates/governor-launcher-gui/src/: index.html  main.rs
crates/governor-mcp/: Cargo.toml
crates/governor-mcp/src/: lib.rs  main.rs  server.rs  state.rs
crates/governor-mcp/tests/: handler.rs  integration.rs
docs/: distribution.md
docs/intelligence/: 2026-05-02-pricing-and-config.md  2026-05-05-playwright-results.json  2026-05-05-queue-impl.md  2026-05-05-review-output.md  playwright-results.json
docs/intelligence/nuclei-scan/: SCAN_REPORT.md  community-findings.json  community-findings.txt  custom-findings.json  custom-findings.txt  post-impl-findings.json  post-impl-findings.txt
docs/intelligence/nuclei-scan/payloads/: oversize_body.json
docs/intelligence/nuclei-scan/templates/: T-01-security-headers-check.yaml  T-02-auth-bypass-classify.yaml  T-03-method-confusion.yaml  T-04-oversized-payload.yaml  T-05-malformed-json.yaml  T-06-path-traversal.yaml  T-07-version-disclosure.yaml  T-08-shift-out-of-range.yaml
docs/internal/: PLAN-T-G-1-historical.md
examples/: bash-precommit-hook.sh  claude-code-integration.md  codex-integration.md  cursor-integration.md  router.py  three-modes.md
examples/claude-code/: README.md  governor-hook.sh  install.sh
scripts/: install.sh  package-macos.sh
tests/browser/: .gitignore  dashboard.spec.ts
tools/mcp-blackbox/: README.md  blackbox.py
windows-pack/: README-WINDOWS.md  Setup API Key.bat  Start SovaCount.bat  Stop SovaCount.bat
windows-pack/icons/: README.md
windows-pack/scripts/: Setup-ApiKey.ps1  Start-SovaCount.ps1  Stop-SovaCount.ps1
