[package]
name = "governor-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line frontend for Token Governor."
readme = "../../README.md"

[[bin]]
name = "tier-classify"
path = "src/main.rs"

[dependencies]
governor-core = { path = "../governor-core", version = "0.1" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
