[package]
name = "governor-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
description = "HTTP-server frontend for Token Governor."
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "governor-http"
path = "src/main.rs"

[dependencies]
governor-core = { path = "../governor-core", version = "0.1" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
async-trait.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3.21"
