[package]
name = "governor-launcher-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native wry+tao launcher voor SovaCount — aan/uit-knop, dashboard-link, Sovareq design-tokens."

[[bin]]
name = "sovacount-launcher"
path = "src/main.rs"

[dependencies]
wry = { version = "0.48", default-features = false, features = ["protocol"] }
tao = "0.32"
serde = { workspace = true }
serde_json = { workspace = true }

# Geen externe HTTP-client nodig — launcher spawnt het lokale `governor-http`
# binary als child process en praat ermee via /health endpoint via stdlib.
