[package]
name = "governor-launcher-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native wry+tao launcher voor SovaCount — aan/uit-knop, dashboard-link, Sovareq design-tokens."

[[bin]]
name = "sovacount-launcher"
path = "src/main.rs"

[dependencies]
# UI stack — versies bewust gepind op de werkende combo. Een version-bump
# (wry 0.55 + tao 0.35) staat gepland voor een aparte tranche.
wry = { version = "0.48", default-features = false, features = ["protocol"] }
tao = "0.32"
serde = { workspace = true }
serde_json = { workspace = true }

# Process-lifecycle hardening.
#
# `kill_tree` doet een recursieve walk van de proces-boom via `ps` op macOS
# en stuurt SIGKILL naar de hele subtree. Voorkomt orphan `governor-http`
# als de launcher panic't of force-killed wordt.
kill_tree = "0.2"

# `single-instance` schrijft een flock-based lock op /tmp om te voorkomen dat
# een Finder-double-click een tweede launcher spawnt die op dezelfde poort
# probeert te binden (zou silent falen).
single-instance = "0.3"

# `signal-hook` registreert handlers voor SIGTERM/SIGINT die de Drop-guard
# triggeren via een AtomicBool. Werkt zonder Tokio-runtime — bewust geen
# Tokio omdat de tao EventLoop niet-async is.
signal-hook = "0.3"

# Direct kill() syscall voor SIGTERM naar de child voor een graceful-shutdown
# poging voordat we kill_tree() inschakelen.
libc = "0.2"

# Logging naar bestand (~/Library/Logs/SovaCount.log op macOS). Zonder dit
# blijft elk launcher-probleem onzichtbaar (child stdio is Stdio::null en
# bij .app-launch heeft de launcher zelf geen terminal).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Geen externe HTTP-client nodig — launcher spawnt het lokale `governor-http`
# binary als child process en praat ermee via /health endpoint via stdlib.
