[package]
name = "governor-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP-server frontend for Token Governor (stdio transport)."
readme = "../../README.md"

[lib]
name = "governor_mcp"
path = "src/lib.rs"

[[bin]]
name = "governor-mcp"
path = "src/main.rs"

[dependencies]
governor-core = { path = "../governor-core", version = "0.1" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
